# isa-tools

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  about.markdown  asli.opam  asli.opam.locked  dune-project  index.markdown  isa-tools.opam  isa-tools.opam.locked  language.markdown  mk_install.py  old_prelude.asl  requirements.txt  stdlib.isa
.github/workflows/: pull-request.yml
_posts/: 2025-05-09-extension-exception-markers.markdown  2025-08-21-language-changes.markdown  2026-06-27-designing-a-language-for-readability.md  2026-06-28-naming-conventions-for-readability.md  2026-06-29-designing-syntax-for-readability.md  2026-06-30-designing-types-for-readability.md  2026-07-02-designing-exceptions-for-readability.md
_sass/minima/: custom-styles.scss
assets/: docbook.css  docbook.js
demo/: .gitignore  Makefile  config.json  demo.isa  simulator.c  test.prj
language/: ISA_LRM.db
libASL/: eval.ml  eval.mli  xform_constprop.ml  xform_mono.ml
libISA/: .tcheck.ml.swn  asl_lexer.mll  asl_parser.messages  asl_parser.mly  backend_c.ml  backend_c.mli  backend_mlir.ml  backend_mlir.mli  bin_file.ml  bin_file.mli  builtin_idents.ml  builtin_idents.mli  check_monomorphization.ml  commands.ml  commands.mli  configuration.ml  configuration.mli  cpu.ml  cpu.mli  dune  elf.ml  elf.mli  error.ml  error.mli  eval.ml  eval.mli  flags.ml  flags.mli  format_utils.ml  format_utils.mli  global_checks.ml  global_checks.mli  hlir.ml  ident.ml  ident.mli  identset.ml  identset.mli  isa_ast.ml  isa_fmt.ml  isa_fmt.mli  (+71 more)
runtime/: Makefile  dune
runtime/include/asl/: bits1024.h  bits128.h  bits2048.h  bits256.h  bits4096.h  bits512.h  bits64.h  bits8192.h  bits_template.h  error.h  info.h  integer.h  print.h  print_template.h  ram.h  runtime.h  runtime.hpp  set_slice_template.h  track_valid.h
runtime/lib/: bits1024.c  bits128.c  bits2048.c  bits256.c  bits4096.c  bits512.c  bits64.c  bits8192.c  bits_template_c.h  end_of_execution.c  error.c  info.c  ram.c  set_slice_template_c.h  sign_extend_bits_template_c.h
runtime/test/: Makefile  bits_test.cc  bits_test_template.h  integer_test.cc  ram_test.cc  sign_extend_bits_test_template.h
share/: env.csh  env.sh
share/editors/: isa.vim  isa.xml
share/editors/vscode.isa.syntaxhighlighter/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
tests/: asl_test.ml  asl_utils_test.ml  backend_c_c23_test.ml  backend_c_fallback_test.ml  dune  lit.cfg  loadisa_test.ml  test_cases_backend.ml  test_utils.ml  test_utils_backend.ml  xform_bitslices_test.ml  xform_bittuples_test.ml  xform_case_test.ml  xform_constprop_test.ml  xform_getset_test.ml  xform_int_bitslices_test.ml  xform_lower_test.ml  xform_named_type_test.ml  xform_simplify_expr_test.ml  xform_tuples_test.ml  xform_valid_test.ml  xform_wrap_test.ml
tests/backends/: bits_add_00.isa  bits_and_00.isa  bits_append_00.isa  bits_asr_00.isa  bits_cvt_sint_00.isa  bits_cvt_ssintN_00.isa  bits_cvt_uint_00.isa  bits_cvt_usintN_00.isa  bits_eq_00.isa  bits_get_slice_00.isa  bits_get_slice_01.isa  bits_get_slice_02.isa  bits_lsl_00.isa  bits_lsr_00.isa  bits_mk_mask_00.isa  bits_mul_00.isa  bits_ne_00.isa  bits_not_00.isa  bits_ones_00.isa  bits_or_00.isa  bits_print_hex_00.isa  bits_print_hex_01.isa  bits_replicate_00.isa  bits_set_slice_00.isa  bits_set_slice_01.isa  bits_set_slice_02.isa  bits_set_slice_03.isa  bits_sext_00.isa  bits_sext_01.isa  bits_sub_00.isa  bits_sub_01.isa  bits_xor_00.isa  bits_zeros_00.isa  bits_zext_00.isa  bool_and_00.isa  bool_eq_00.isa  bool_ne_00.isa  bool_not_00.isa  bool_or_00.isa  cint_cvt_to_int_00.isa  (+138 more)
tests/lit/check_monomorphization/: test_00.isa
tests/lit/dependencies/: nocheck_00.isa
tests/lit/eval/: error_location_00.isa  slice_00.isa  slice_01.isa
tests/lit/globalchecks/: eval_order_00.isa  eval_order_01.isa  eval_order_02.isa  eval_order_03.isa  (+11 more)
(+132 files in other folders)
