(rule
  (deps (source_tree includes)
        (source_tree lib)
        (file Makefile))
  (targets libASL.a)
  (action
    (no-infer
      (progn
        (run make BUILD_DIR=build)
        (copy build/libASL.a libASL.a)))))

(install
 (section lib)
 (files (libASL.a as runtime/libASL.a)))

(install
  (section lib)
  (files (glob_files (include/asl/*.h* with_prefix runtime_include/asl))))
